# pyodide-demo

./: README.md  display.js  import.py.js  index.html  index.html.ok.bk  index1.bk.html  index2.bk.html  loader.html  loading.js  main.js  package-lock.json  package.json  pyproject.toml  sample.json  server.py  style.scss
css/: style.css  style.css.map
py/: random_walk.py  random_walk.py.js  source.py.js
pysource/: random_walk.py.js
