[tool.poetry]
name = "pyodide-demo"
version = "0.1.0"
description = ""
authors = ["Nu2-Cracker <orcinusorca1758dv6932@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
